Se agrega indicador

--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
     </div>
     
   </header>
+
+  <main>
+    <div class="cont-cont">
+      <div class="cont">
+        <span class="cont__span">⇧</span>
+        <h1 class="cont__title">Press me </h1>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
